// API definition for Clouds service.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.breakit.clouds";
option java_outer_classname = "CloudsProto";

package clouds;

/*
 * Unary service to request cloud positions.
 */
service CloudsService {
    /*
     * Return next line of cloud positions.
     */
    rpc GetClouds (GetCloudsRequest) returns (CloudsResponse);
}

/*
 * Request to recieve next lines of clouds.
 */
message GetCloudsRequest {
    /*
     * Number of requested horizontal lines.
     */
    int32 lines_count = 1;
    /*
     * Line width: max number of clouds in one sceen horizontal line.
     */
    int32 line_width = 2;
    /*
     * Single cloud width in pixels.
     * This arguments is used to make sure clouds in one line don't overlap.
     */
    int32 cloud_width = 3;
}

/*
 * Contains list of horizontal lines with clouds.
 */
message CloudsResponse {
    /*
     * Horizontal lines with clouds, up to a requested number.
     */
    repeated CloudsLine lines = 1;
}

/*
 * Contains cloud positions in a horizontal line.
 */
message CloudsLine {
    /*
     * Array of clouds. Numbers in the array represent vertical positions
     * of clouds. For example, [2, 14] array means there are clouds in the second
     * and fourteens column of the line.
     */
    repeated int32 cloud_positions = 1;
}
