// API definition for API Gateway service.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.breakit.gateway";
option java_outer_classname = "GatewayProto";

package gateway;

/*
 * Unary service to request game fixture.
 */
service FixtureService {
    /*
     * Return next lines of a game fixture.
     */
    rpc GetFixture (GetFixtureRequest) returns (FixtureResponse);
}

/*
 * Request to recieve next lines.
 */
message GetFixtureRequest {
    /*
     * Number of requested horizontal lines.
     */
    int32 lines_count = 1;
    /*
     * Line width: max number of elements in one sceen horizontal line.
     */
    int32 line_width = 2;
}

/*
 * Contains list of horizontal fixture lines.
 */
message FixtureResponse {
    /*
     * Horizontal fixture lines, up to a requested number.
     */
    repeated FixtureLine lines = 1;
}

/*
 * Contains goose and cloud positions in a horizontal line.
 */
message FixtureLine {
    /*
     * Array of geese. Numbers in the array represent vertical positions
     * of geese. For example, [1, 3] array means there are geese in the first
     * and third column of the line.
     */
    repeated int32 goose_positions = 1;
    /*
     * Array of clouds. Numbers in the array represent vertical positions
     * of clouds. For example, [2, 4] array means there are clouds in the second
     * and fourth column of the line.
     */
    repeated int32 cloud_positions = 2;
}
